# controller_demo

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh
include/: dynamic_model.h  pid.h  simple_model.h
src/: CMakeLists.txt  pid.cpp  simple_model.cpp
tests/: CMakeLists.txt  main.cpp  test_pid.cpp
